# CPP-ML

./: .gitignore  CMakeLists.txt
include/: Data.h  DataHandler.h  Neighbor.h  Utility.h  kmeans.h  knn.h
include/nn/: HiddenLayer.h  InputLayer.h  Layer.h  Network.h  Neuron.h  OutputLayer.h
src/: Data.cpp  DataHandler.cpp  Layer.cpp  Neuron.cpp  main.cpp
